prepare to test having lead broker spec in broker.toml template
